# autobox

./: .gitignore  README.md  config_example.toml  docker-compose.yml  example.txt  pyproject.toml  requirements.txt  runner.py  server.toml  summer_vacation.json
autobox/: autobox.py  cli.py  config.py  main.py  server.py  utils.py
autobox/agents/: agent.py  base.py  planner.py  prompts.py  supervisor.py  worker.py
autobox/api/: abort_simulation.py  create_server_simulation.py  create_simulation.py  get_metrics_by_simulation_id.py  get_organizations.py  get_project_by_id.py  get_projects.py  get_prometheus_metrics.py  get_simulation_by_id.py  get_simulations.py  ping.py  update_agent_instruction.py
autobox/bootstrap/: bootstrap.py
autobox/cache/: cache.py  metrics.py  simulation.py  traces.py
autobox/common/: logger.py
autobox/core/: agent.py  bootstrap.py  llm.py  mail.py  messaging.py  metric_collector.py  network.py  orchestrator.py  simulation.py  simulator.py  worker.py
autobox/llm/: openai.py
autobox/logger/: logger.py
autobox/metrics/: grafana.py  prometheus.py  (+1 more)
config/: agents.toml  agents.yml  autobox.toml  simulation.toml  tasks.toml  tools.toml
examples/: config_countries_agreement.toml  config_countries_climate_change_agreement.toml  config_couple_vacation.toml  config_crime_detective.toml  config_startup_idea.toml  config_system.toml  summary_vacation.txt
metrics/: crime_solving.json  startup_idea.json  summer_vacation.json  summer_vacation2.json  summer_vacation3.json  summer_vacation4.json
src/: autobox.py  runner.py
tests/: test.py
(+72 files in other folders)
