[tool.poetry]
name = "autobox"
version = "0.1.0"
description = ""
authors = ["margostino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.10"
python-dotenv = "^1.0.1"
pydantic = "1.10.14"
halo = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
