[tool.poetry]
name = "autobox"
version = "0.1.0"
description = ""
authors = ["margostino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "1.43.1"
python-dotenv = "^1.0.1"
pydantic = "2.9.0"
halo = "^0.0.31"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
watchgod = "^0.8.2"
docker = "^7.1.0"
grafana-client = "^4.1.0"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
